screening card alignment fix

--- a/style.css
+++ b/style.css
@@ -298,8 +298,9 @@ section#why-attend{
             position: relative;
             & .screening-no{
                 position: absolute;
-                top: -50px;
-                left: calc(50% - 50px);
+                top: 0;
+                left: 50%;
+                transform: translate(-50%,-50%);
                 width: 100px;
                 height: 100px;
                 /* background-color: red; */
@@ -783,7 +784,7 @@ footer{
             max-width: 300px !important;
             min-height: 0 !important;
             padding-top: 5rem !important;
-            padding: 2rem !important;
+            /* padding: 2rem !important; */
         }
         .screening-no{
             width: 75px !important;
